# remembu_auth

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  log_config.yml  pyproject.toml  pytest.ini  requirements.txt
core/: config.py
database/postgres/: database.py
filebeat/: Dockerfile  filebeat.yml
migrations/: env.py
migrations/versions/: 5086bdbe9af2_create_user.py
src/: main.py  testing.py
src/api/: deps.py
src/api/api_v1/endpoints/: login.py  users.py
src/core/: config.py  exceptions.py  jsonlogging.py  security.py
src/crud/: base.py  crud_user.py
src/database/postgres/: base.py  database.py
src/kafka/: consumer.py  producer.py
src/middleware/: logging.py
src/models/: user.py
src/schemas/: __init__.py  user.py
tests/: conftest.py
tests/core/: test_exceptions.py  test_secuity.py
tests/crud/: test_user.py
