[tool.poetry]
name = "remembu-auth"
version = "0.1.0"
description = ""
authors = ["Alexey Balahanov <alexeybalahanov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.12.0"
annotated-types = "0.5.0"
anyio = "3.7.1"
asyncpg = "0.28.0"
black = "23.7.0"
cffi = "1.15.1"
cfgv = "3.4.0"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "41.0.4"
distlib = "0.3.7"
ecdsa = "0.18.0"
fastapi = "0.103.1"
filelock = "3.12.3"
greenlet = "2.0.2"
h11 = "0.14.0"
httptools = "0.6.0"
identify = "2.5.27"
idna = "3.4"
mako = "1.2.4"
markupsafe = "2.1.3"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
packaging = "23.1"
passlib = "1.7.4"
pathspec = "0.11.2"
platformdirs = "3.10.0"
pre-commit = "3.4.0"
pyasn1 = "0.5.0"
pycparser = "2.21"
pydantic-settings = "2.0.3"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
python-multipart = "0.0.6"
pyyaml = "6.0.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.20"
starlette = "0.27.0"
typing-extensions = "4.7.1"
uvicorn = "0.23.2"
virtualenv = "20.24.4"
watchfiles = "0.20.0"
websockets = "11.0.3"
pydantic = {extras = ["email"], version = "^2.4.2"}
aiokafka = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
